<resources>
    <string name="app_name">MiK</string>
    <string name="mik">MiK</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="fullname">full name</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="post">Post</string>
    <string name="group">Group</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open_drawer">open nav drawer</string>
    <string name="nav_close_drawer">close nav drawer</string>
    <string name="notification">Notification</string>
    <string name="user_full_name">User full name</string>
    <string name="personal_information">Personal Information</string>
    <string name="pick_a_birthdate">Pick a birthdate</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="send">Send</string>
    <string name="empty_private_group">No any available private groups</string>
    <string name="post_content_hint">What\'s on your mind?</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="submit">Submit</string>
    <string name="post_like_text">Like</string>
    <string name="post_comment_text">Comment</string>
    <string name="post_share_text">Share</string>
    <string name="post_group_name">\u0020‣\u0020%s</string>

    <!--\u0020 is for adding blank space -->
    <string name="comment_counter_singular">%d\u0020Comment</string>
    <string name="comment_counter_plural">%d\u0020Comments</string>
    <string name="comment_counter_kplural">%dK\u0020Comments</string>

    <string name="group_counter_singular">%d\u0020member</string>
    <string name="group_counter_plural">%d\u0020members</string>
    <string name="group_counter_kplural">%dK\u0020members</string>

    <string name="like_counter_singular">%d\u0020Like</string>
    <string name="like_counter_plural">%d\u0020Likes</string>
    <string name="like_counter_kplural">%dK\u0020Likes</string>
    <string name="post_detail_comment_hint">Write a comment...</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="email_input_positive_caption">Next</string>
    <string name="email_input_negaitve_caption">Cancel</string>
    <string name="new_password">new password</string>
    <string name="reset_password_positive_caption">Save</string>
    <string name="reset_password_negative_caption">Cancel</string>

    <string name="unknown_error">Unknown Error</string>
    <string name="empty_load_result">No contents found</string>
    <string name="retry">Retry</string>
    <string name="cancelEditDiag_message">You have unsaved changes. Do you want to discard changes, or continue editing?</string>
    <string name="cancelEditDiag_positive_caption">Continue editing</string>
    <string name="cancelEditDiag_negative_caption">Discard changes</string>
    <string name="JoinGroupDiag_Positive_Caption">Join</string>
    <string name="JoinGroupDiag_Negative_Caption">Cancel</string>
    <string name="deldaig_message">Are you sure you want to delete %s?</string>
    <string name="deleavediag_message">Are you sure you want to delete and leave this group?</string>
    <string name="leavediag_message">Are you sure you want to leave this group?</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="leavediag_positive_caption">Leave</string>
</resources>
