<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_header_profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_header_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@android:color/primary_text_light"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/nav_header_profile_image"
        app:layout_constraintTop_toBottomOf="@+id/nav_header_profile_image"
        android:text="@string/user_full_name" />

    <TextView
        android:id="@+id/nav_header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="@id/nav_header_fullname"
        app:layout_constraintTop_toBottomOf="@id/nav_header_fullname"
        android:text="@string/username" />

    <TextView
        android:id="@+id/nav_header_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        app:layout_constraintStart_toStartOf="@id/nav_header_username"
        app:layout_constraintTop_toBottomOf="@id/nav_header_username"
        android:text="@string/email" />

</androidx.constraintlayout.widget.ConstraintLayout>