<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ems"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.modernpage.activity.HelpFeedbackActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/help_feedback"
        android:textColor="@color/primaryDarkColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/helpfeedback_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/textfield_bg"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <EditText
        android:id="@+id/helpfeedback_description"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textfield_bg"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@+id/helpfeedback_title"
        app:layout_constraintStart_toStartOf="@+id/helpfeedback_title"
        app:layout_constraintTop_toBottomOf="@+id/helpfeedback_title" />

    <Button
        android:id="@+id/helpfeedback_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_style2"
        android:fontFamily="@font/roboto_medium"
        android:onClick="onSend"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/send"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/helpfeedback_description"
        app:layout_constraintStart_toStartOf="@+id/helpfeedback_description"
        app:layout_constraintTop_toBottomOf="@+id/helpfeedback_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
